fixed left margin for cast names on mobile

--- a/sass/cast.scss
+++ b/sass/cast.scss
@@ -76,7 +76,7 @@ h1 {
 	.cast-member-name {
 		font-size: 12px;
 		height: 20px;
-		padding-left: 5px;
+		padding-left: 6px;
 		padding-top: 2px;
 	}
 	.member-overlay img {
